# PixFlow-backend

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
auth_server/: admin.py  models.py  serializers.py  urls.py  views.py
auth_server/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py
fixtures/posts/: posts.json
posts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
settings/: settings.py  urls.py
